name:                light-weight-opengl-obj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/light-weight-opengl-obj#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.OBJ
  other-modules:       Graphics.OBJ.Assembly
                       Graphics.OBJ.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , linear
                     , mtl
                     , megaparsec
                     , OpenGLRaw
                     , scientific
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/light-weight-opengl-obj
